[gd_scene load_steps=4 format=3 uid="uid://degkpav83o423"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_ds64o"]
[ext_resource type="AudioStream" uid="uid://cb7da2omp3pak" path="res://assets/sfx/music/Pamahaw.mp3.mp3" id="2_16y3b"]
[ext_resource type="AudioStream" uid="uid://bewh20em4j8e4" path="res://assets/sfx/sfx_slct.wav" id="3_jsd8n"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ds64o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.945098, 0.909804, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.796078, 0.309804, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.945098, 0.576471, 1)
text = "Play"
flat = true

[node name="Instructions" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.945098, 0.909804, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.796078, 0.309804, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.945098, 0.576471, 1)
text = "Credits
"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.945098, 0.909804, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.796078, 0.309804, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.945098, 0.576471, 1)
text = "Quit
"
flat = true

[node name="BG_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_16y3b")
volume_db = -5.024

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jsd8n")
volume_db = -7.0

[connection signal="button_up" from="VBoxContainer/Play" to="." method="_on_play_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="button_up" from="VBoxContainer/Instructions" to="." method="_on_instructions_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/Instructions" to="." method="_on_play_mouse_entered"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_play_mouse_entered"]
